Bug 59693 - [gst-vaapi] denoising results in garbage on IVB
Summary: [gst-vaapi] denoising results in garbage on IVB
Status: VERIFIED FIXED
Alias: None
Product: libva
Classification: Unclassified
Component: intel (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: haihao
QA Contact: Sean V Kelley
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-01-22 02:39 UTC by Du Yan
Modified: 2013-02-25 02:26 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Du Yan 2013-01-22 02:39:26 UTC
Environment
---------------------
Platform: IVB
libva: staging 21649988d6b532cc96f633db017d1e4369f640e9
intel-driver: staging d206b47a6ac86c089149ecd71b01eea6ebda5796
gst-vaapi: qa 6672fcd1f74ee62b4e7772b9f5929152058f25ea


Bug Info
-------------------
There is garbage when decoding the files encoded by cqp 


Steps
-------------------
1. xinit&
2. gst-launch-0.10 filesrc location=/home/CQP_SOCCER_704x576_30_orig_02.yuv.enc.264 ! h264parse ! vaapidecode ! vaapipostproc denoise=1 denoise-level=0.3 ! vaapisink sync=false


Commnets
-------------------
only can be reproduced on IVB (test OK on SNB/HSW)
issue refer to #Bug 56604 - [gst-vaapi] GST VPP doesn’t support the files encoded by cqp
Comment 1 haihao 2013-02-05 08:52:45 UTC
commit 7786598afc0df719cd42c2955337c3885699a57f
Author: Xiang, Haihao <haihao.xiang@intel.com>
Date:   Tue Feb 5 16:39:37 2013 +0800

    Update the binding table index on IVB
    
    The index used by the shader is 33 instead of 5.
Comment 2 Du Yan 2013-02-25 02:26:44 UTC
Can't be reproduced.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.