Update the binding table index on IVB

The index used by the shader is 33 instead of 5.

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=59693
Signed-off-by: Xiang, Haihao <haihao.xiang@intel.com>